--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="home">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-              <a class="navbar-brand lgo" href="#"><img src="image/logo.png" alt="ahaz_logo" width="60" height="60"></a>
+              <a class="navbar-brand lgo" href="#">LOGO</a>
               <button class="navbar-toggler border border-light-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon bg-light"></span>
               </button>
@@ -272,12 +272,12 @@
                 </h5>
                 <p>
                     <span class="bg-light fw-bold" style="border-radius: 50px; padding: 0 10px;">
-                        +251 96 727 000
+                        +251 34 727 345
                     </span>
                 </p>
                 <p>
                     <span class="bg-light fw-bold"  style="border-radius: 50px; padding: 0 10px;">
-                        +251 97 808 1418
+                        +251 927 456 4564
                     </span>
                 </p>
                 <h5 class="fw-bolder text-light mt-5">
@@ -285,7 +285,7 @@
                 </h5>
                 <p>
                     <span class="bg-light fw-bold" style="border-radius: 50px; padding: 0 10px;">
-                       info@ahaz.be
+                       info@email.be
                     </span>
                 </p>
                 <h5 class="fw-bolder text-light mt-5">
